# data-summaries-quantiles

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: example_benchmark_lognormal.txt
project/: CMakeLists.txt  main.cpp
project/dataset_generators/: uniform_dist2file.py  uniform_dist2fileinC.cpp
project/ddsketch/: ddsketch.cpp  ddsketch.h  dense_store.cpp  dense_store.h  logarithmic_mapping.cpp  logarithmic_mapping.h
project/ddsketch/ddsketch_pycomparison/: mytest.py
project/exact_quantiles/: README.md  exact_quantiles.cpp  exact_quantiles.h
project/histogram_sketch/: histogram_sketch.cpp  histogram_sketch.h
project/kll/: kll.cpp  kll.h
project/tdigest/: tdigest.cpp  tdigest.h
project/tests/: test_main.cpp
pyplotting/: main.py  plot.py  requirements.txt
